--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "bcrypt": "https://github.com/pyca/bcrypt.git",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
