--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "bcrypt": "https://github.com/pyca/bcrypt.git",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.1",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
