--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "npx tsc",
-    "start": "nodemon server.ts"
+    "start": "bun --smol --hot server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
@@ -19,11 +19,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.3",
     "@types/cors": "^2.8.14",
     "@types/jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
-    "bcrypt-nodejs": "^0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
