--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
