--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcryptjs": "^2.4.3",
     "@types/cors": "^2.8.14",
     "@types/jsonwebtoken": "^9.0.2",
+    "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.0",
