--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "repository": "https://github.com/thienbao0106/V1flix-BE-GPL.git",
   "author": "Lâm Thiên Bảo <lamthienbao0106@gmail.com>",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "build": "npx tsc",
-    "start": "nodemon --esm server.ts"
+    "start": "nodemon server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
