--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
+    "puppeteer": "^21.11.0",
     "ts-node": "^10.9.1"
   },
   "engines": {
