--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "puppeteer": "^21.11.0",
+    "socket.io": "^4.7.4",
     "ts-node": "^10.9.1"
   },
   "engines": {
